# project-recovery-council-qwen

./: .gitignore  LICENSE  README.md  pyproject.toml
decisions/: ADR-0001-project-scope-and-architecture.md  ADR-0002-deterministic-local-workflow-runner.md  ADR-0003-versioned-contracts-and-resumable-workflows.md  ADR-0004-v1-contract-freeze-and-ci.md  ADR-0005-qwen-agent-society-experiment-architecture.md  ADR-0006-opt-in-live-qwen-provider.md  ADR-0007-agent-evidence-scope-and-semantic-validation.md  ADR-0008-schedule-semantic-validation.md  ADR-0009-versioned-claim-key-normalization.md  ADR-0010-schedule-status-and-remaining-float-alias.md  ADR-0011-controlled-live-variant-comparison.md  ADR-0012-metric-applicability-and-live-report-provenance.md  ADR-0013-validated-findings-synthesis-handoff.md  ADR-0014-authorization-state-and-final-citation-propagation.md  ADR-0015-shared-dynamic-validation-and-arbitration-policy.md  ADR-0016-dedicated-evidence-auditor-contract.md  ADR-0017-competition-evidence-and-submission-framing.md
docs/: ARCHITECTURE.md  ARTIFACT_REDACTION.md  CASE_MODEL.md  CLAIM_NORMALIZATION.md  DEVELOPMENT_PLAN.md  DYNAMIC_COUNCIL_GOVERNANCE_POLICY.md  EVIDENCE_AUDITOR_RESPONSE_CONTRACT.md  EXPERIMENT_DESIGN.md  LIVE_COMPARISON_RUNBOOK.md  LIVE_PROVIDER_PLAN.md  LIVE_QWEN_SETUP.md  METRICS.md  PROMPT_ARCHITECTURE.md  QWEN_COMPETITION_STRATEGY.md  REMAINING_ROLE_SCOPE_ANALYSIS.md  REPLAY_ACCEPTANCE_PROFILE.json  ROLE_SCOPE_POLICY.md  RUN_ARTIFACT_CONTRACT.md  SCHEMA_VERSIONING_POLICY.md  TARGET_BRIEF.md  UIPATH_MAESTRO_MAPPING.md  VALIDATED_FINDINGS_HANDOFF.md
scripts/: run_demo.py
session-artifacts/: BUILD_CHECKPOINT_2026_06_16.md  BUILD_CHECKPOINT_2026_06_16_CLAIM_NORMALIZATION.md  BUILD_CHECKPOINT_2026_06_16_CONTRACTS_RESUME.md  BUILD_CHECKPOINT_2026_06_16_FINAL_LOCAL_HARDENING.md  BUILD_CHECKPOINT_2026_06_16_LIVE_QWEN_PROVIDER.md  BUILD_CHECKPOINT_2026_06_16_LIVE_VARIANT_COMPARISON.md  BUILD_CHECKPOINT_2026_06_16_QWEN_COMPETITION_ADAPTATION.md  BUILD_CHECKPOINT_2026_06_16_ROLE_SCOPE_HARDENING.md  BUILD_CHECKPOINT_2026_06_16_SCHEDULE_SEMANTIC_VALIDATION.md  BUILD_CHECKPOINT_2026_06_16_SCHEDULE_STATUS_ALIAS.md  BUILD_CHECKPOINT_2026_06_16_WORKFLOW_RUNNER.md  BUILD_CHECKPOINT_2026_06_17_AUTHORIZATION_CITATION_HARDENING.md  BUILD_CHECKPOINT_2026_06_17_DYNAMIC_GOVERNANCE_HARDENING.md  (+21 more)
(+279 files in other folders)
