[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-recovery-council"
version = "0.1.0"
description = "Deterministic foundation for a governed project recovery expert system."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
  { name = "Project Recovery Council maintainers" }
]
dependencies = [
  "pydantic>=2,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

