[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-recovery-council-qwen"
version = "0.1.0"
description = "Qwen Agent Society competition adaptation of the deterministic Project Recovery Council."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
  { name = "Project Recovery Council maintainers" }
]
dependencies = [
  "pydantic>=2,<3"
]

[project.scripts]
prc-qwen = "project_recovery_council.__main__:main"
project-recovery-council = "project_recovery_council.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/project_recovery_council"]
